--- a/package.json
+++ b/package.json
@@ -35,11 +35,12 @@
     "lit-html": "^1.4.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.46.0",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-dts": "^3.0.1",
     "rollup-plugin-typescript2": "^0.30.0",
+    "serve": "^11.3.2",
     "starboard-notebook": "^0.8.13",
-    "typescript": "^4.2.4",
-    "serve": "^11.3.2"
+    "typescript": "^4.2.4"
   },
   "dependencies": {
     "mathlive": "^0.63.0"
