--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "starboard-mathlive",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Mathlive cells for Starboard Notebook",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "typings": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "rimraf dist && rollup -c rollup.config.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublishOnly": "npm i && npm run build",
-    "start": "npm run build && serve dist -l 8080"
+    "start": "npm run build && serve dist -l 8080",
+    "deploy": "npm run build && node utils/publish.js"
   },
   "repository": {
     "type": "git",
@@ -27,22 +31,22 @@
   },
   "homepage": "https://github.com/stefnotch/starboard-mathlive#readme",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^18.0.0",
-    "@rollup/plugin-node-resolve": "^11.2.1",
+    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
     "@types/iframe-resizer": "^3.5.8",
     "@types/markdown-it": "^12.0.1",
     "clean-css": "^5.1.2",
-    "lit-html": "^1.4.0",
+    "lit": "*",
     "rimraf": "^3.0.2",
-    "rollup": "^2.46.0",
+    "rollup": "^2.50.1",
     "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-dts": "^3.0.1",
+    "rollup-plugin-dts": "^3.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
     "serve": "^11.3.2",
-    "starboard-notebook": "^0.8.13",
-    "typescript": "^4.2.4"
+    "starboard-notebook": "^0.10.1",
+    "typescript": "^4.3.2"
   },
   "dependencies": {
-    "mathlive": "^0.63.0"
+    "mathlive": "^0.67.0"
   }
 }
