--- a/package.json
+++ b/package.json
@@ -36,9 +36,10 @@
     "@types/iframe-resizer": "^3.5.8",
     "@types/markdown-it": "^12.0.1",
     "clean-css": "^5.1.2",
+    "gh-pages": "^3.2.0",
     "lit": "*",
     "rimraf": "^3.0.2",
-    "rollup": "^2.50.1",
+    "rollup": "^2.50.2",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-dts": "^3.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
