--- a/package.json
+++ b/package.json
@@ -35,19 +35,19 @@
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@types/markdown-it": "^12.0.2",
     "clean-css": "^5.1.2",
-    "gh-pages": "^3.2.1",
+    "gh-pages": "^3.2.3",
     "lit": "*",
     "rimraf": "^3.0.2",
-    "rollup": "^2.51.2",
+    "rollup": "^2.52.2",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-dts": "^3.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
     "serve": "^12.0.0",
-    "starboard-notebook": "^0.12.0",
-    "typescript": "^4.3.2"
+    "starboard-notebook": "^0.12.1",
+    "typescript": "^4.3.4"
   },
   "dependencies": {
-    "@cortex-js/math-json": "^0.2.3",
-    "mathlive": "^0.69.3"
+    "@cortex-js/compute-engine": "^0.4.2",
+    "mathlive": "^0.69.4"
   }
 }
